--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -43,7 +44,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.4",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.1"
   }
 }
