Fix: Use tsc directly in start command for Render deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learn & Earn Backend API",
   "main": "dist/index.js",
   "scripts": {
-    "start": "npm run build && node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "seed": "ts-node src/scripts/seed.ts",
