--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "tsc && node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
+    "postinstall": "tsc",
     "seed": "ts-node src/scripts/seed.ts",
     "seed:admob": "ts-node src/scripts/seedAdMob.ts",
     "test:quiz": "ts-node src/scripts/testQuiz.ts",
